--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/himanshu070/wordpass#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "nodemon": "^2.0.20"
   }
 }
